--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       <ul>
         <li><a ui-sref="home">Home</a></li>
         <li><a ui-sref="blogsIndex">blogsIndex</a></li>
+        <li><a ui-sref="projectsIndex">projectsIndex</a></li>
         <li ng-if="main.isAuthenticated()"><a ng-click="main.logout()" href="#">New Blog</a></li>
           </ul>
     </nav>
@@ -24,7 +25,9 @@
     <div class="footer">
       <ul>
         <li><a ui-sref="home">Home</a></li>
-        <li><a ui-sref="blogsNew">blogsNew</a></li>
+
+        <li ng-if="main.isAuthenticated()"><a ui-sref="blogsNew">blogsNew</a></li>
+        <li ng-if="main.isAuthenticated()"><a ui-sref="projectsNew">projectsNew</a></li>
 
         <li ng-if="!main.isAuthenticated()"><a ui-sref="login">Login</a></li>
         <li ng-if="!main.isAuthenticated()"><a ui-sref="register">Register</a></li>
