--- a/src/index.html
+++ b/src/index.html
@@ -41,18 +41,18 @@
 
     <!-- ======================FOOTER ======================= -->
 
-    <div class="footer">
-      <ul>
-        <li><a ui-sref="home">Home</a></li>
+  <footer class="footer">
+    <ul>
+      <li><a ui-sref="home">Home</a></li>
 
-        <li ng-if="main.isAuthenticated()"><a ui-sref="blogsNew">blogsNew</a></li>
-        <li ng-if="main.isAuthenticated()"><a ui-sref="projectsNew">projectsNew</a></li>
+      <li ng-if="main.isAuthenticated()"><a ui-sref="blogsNew">blogsNew</a></li>
+      <li ng-if="main.isAuthenticated()"><a ui-sref="projectsNew">projectsNew</a></li>
 
-        <li ng-if="!main.isAuthenticated()"><a ui-sref="login">Login</a></li>
-        <li ng-if="!main.isAuthenticated()"><a ui-sref="register">Register</a></li>
-        <li ng-if="main.isAuthenticated()"><a ng-click="main.logout()" href="#">Logout</a></li>
-      </ul>
-    </div>
+      <li ng-if="!main.isAuthenticated()"><a ui-sref="login">Login</a></li>
+      <li ng-if="!main.isAuthenticated()"><a ui-sref="register">Register</a></li>
+      <li ng-if="main.isAuthenticated()"><a ng-click="main.logout()" href="#">Logout</a></li>
+    </ul>
+  </footer>
 
   </body>
 </html>
